[package]
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
readme = "README.md"
name = "pavu-mixer-firmware"
version = "0.0.0"
publish = false
autobins = false

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
micromath = "2.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
postcard = "0.7.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
waveshare-display = { path = "../waveshare-display/" }
common = { path = "../common/", package = "pavu-mixer-common" }
embedded-hal = "0.2.5"
port-expander = "0.2.1"
shared-bus = "0.2.2"
cassette = { git = "https://github.com/jamesmunns/cassette.git", rev = "88347314e53523d9b23ab532bb42ce5bf02f6cbe" }
futures-util = { version = "0.3.15", features = ["async-await", "async-await-macro"], default-features = false }
heapless = "0.7.0"
numtoa = "0.2.3"

[dependencies.stm32f3xx-hal]
git = "https://github.com/stm32-rs/stm32f3xx-hal.git"
rev = "ff651241dc32b140709a2d3bcd05f9594b4f169a"
features = ["stm32f303xc", "stm32-usbd"]

[[bin]]
name = "pavu-mixer-firmware"
test = false
bench = false

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
codegen-units = 1
debug = true
lto = true
