[package]
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
readme = "README.md"
name = "pavu-mixer-firmware"
version = "0.0.0"
publish = false
autobins = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
micromath = "2.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
postcard = "1.0.2"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
waveshare-display = { path = "../waveshare-display/" }
common = { path = "../common/", package = "pavu-mixer-common" }
embedded-hal = "0.2.7"
port-expander = "0.3.0"
shared-bus = "0.2.5"
cassette = { git = "https://github.com/jamesmunns/cassette.git", rev = "88347314e53523d9b23ab532bb42ce5bf02f6cbe" }
futures-util = { version = "0.3.25", features = ["async-await", "async-await-macro"], default-features = false }
heapless = "0.7.16"
numtoa = "0.2.4"

[dependencies.stm32f3xx-hal]
git = "https://github.com/stm32-rs/stm32f3xx-hal.git"
rev = "ff651241dc32b140709a2d3bcd05f9594b4f169a"
features = ["stm32f303xc", "stm32-usbd"]

[[bin]]
name = "pavu-mixer-firmware"
test = false
bench = false

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
codegen-units = 1
debug = true
lto = true
