[package]
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
readme = "README.md"
name = "hardware-tests"
version = "0.0.0"
publish = false
autobins = false

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
micromath = "1.1.1"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
port-expander = "0.2.0"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
stm32f3xx-hal = { version = "0.6.1", features = ["stm32f303xc", "stm32-usbd"] }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
waveshare-display = { path = "../waveshare-display/" }

[[bin]]
name = "display"
test = false
bench = false

[[bin]]
name = "pca9536-demo"
test = false
bench = false

[[bin]]
name = "shiftreg-demo"
test = false
bench = false

[[bin]]
name = "pwm-output"
test = false
bench = false

[[bin]]
name = "pca9555-demo"
test = false
bench = false

[[bin]]
name = "fader-main"
test = false
bench = false

[[bin]]
name = "usb-serial"
test = false
bench = false

[profile.dev]
opt-level = "s"
lto = true

[profile.release]
codegen-units = 1
debug = true
lto = true
