[package]
name = "pavu-mixer-host"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
publish = false

[dependencies]
rusb = "0.8.0"
pulse = { version = "2.0", package = "libpulse-binding" }
postcard = { version = "0.6.1", features = ["alloc"] }
common = { path = "../common/", package = "pavu-mixer-common" }
serde = { version = "1.0.125", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.40"
log = "0.4.14"
confy = "0.4.0"
env_logger = "0.8.3"
