[package]
name = "pavu-mixer-host"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
publish = false

[dependencies]
rusb = "0.9.1"
pulse = { version = "2.26.0", package = "libpulse-binding" }
postcard = { version = "1.0.2", features = ["alloc"] }
common = { path = "../common/", package = "pavu-mixer-common" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
toml = "0.7.1"
anyhow = "1.0.68"
log = "0.4.17"
confy = "0.5.1"
env_logger = "0.10.0"
backoff = "0.4.0"
slab = "0.4.8"
gtk = "0.16.2"
gdk-pixbuf = "0.16.7"
regex = "1.7.1"
