[package]
name = "pavu-mixer-host"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"
publish = false

[dependencies]
rusb = "0.9.1"
pulse = { version = "2.27.1", package = "libpulse-binding" }
postcard = { version = "1.0.4", features = ["alloc"] }
common = { path = "../common/", package = "pavu-mixer-common" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
toml = "0.8.12"
anyhow = "1.0.69"
log = "0.4.17"
confy = "0.5.1"
env_logger = "0.10.0"
backoff = "0.4.0"
slab = "0.4.8"
gtk = "0.17.0"
gdk-pixbuf = "0.17.0"
regex = "1.7.1"
